fix to break in home

--- a/src/app/following-savior/following-savior.component.scss
+++ b/src/app/following-savior/following-savior.component.scss
@@ -25,7 +25,7 @@
   }
 }
 
-.contains {
+.quarters {
   position: absolute;
   top: 0;
   left: 0;
@@ -46,7 +46,7 @@
   opacity: 0.2;
 }
 
-.container {
+.quarter {
   width: 50%;
   height: 50%;
 }
